<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="admin_tools_add_new_pattern">Добавить шаблон</string>
    <string name="admin_tools_ban">BAN</string>
    <string name="admin_tools_categories_title_add_template">Выберите категорию для добавления шаблона</string>
    <string name="admin_tools_categories_title_show_template">Выберите категорию для просмотра шаблонов</string>
    <string name="admin_tools_control_panel_title">Панель управления Admin Tools</string>
    <string name="admin_tools_create_a_form">Подать форму</string>
    <string name="admin_tools_create_pattern_title">Добавление нового шаблона</string>
    <string name="admin_tools_edit_pattern_title">Редактирование шаблона</string>
    <string name="admin_tools_jail">Jail</string>
    <string name="admin_tools_kick">Kick</string>
    <string name="admin_tools_mute">Mute</string>
    <string name="admin_tools_pattern_body">Текст шаблона</string>
    <string name="admin_tools_pattern_title">Название шаблона</string>
    <string name="admin_tools_player_id_and_player_name">[%1$d] %2$s</string>
    <string name="admin_tools_player_info_armor">Броня</string>
    <string name="admin_tools_player_info_hp">Здоровье</string>
    <string name="admin_tools_player_info_level">Уровень</string>
    <string name="admin_tools_player_info_money">Деньги</string>
    <string name="admin_tools_player_info_ping">Пинг</string>
    <string name="admin_tools_player_info_speed">Скорость</string>
    <string name="admin_tools_player_info_transport_strength">Прочность</string>
    <string name="admin_tools_player_information">Информация об игроке</string>
    <string name="admin_tools_punishment_time_days">Время наказания (дни)</string>
    <string name="admin_tools_punishment_time_min">Время наказания (минуты)</string>
    <string name="admin_tools_report_hint_text">Текст жалобы</string>
    <string name="admin_tools_report_table_title">Выберите шаблон ответа на репорт от игрока: %1$s [%2$d]</string>
    <string name="admin_tools_report_template_title_text">Отправить ответ шаблон %1$s</string>
    <string name="admin_tools_report_title_text">Жалоба от игрока: %1$s [%2$d]</string>
    <string name="admin_tools_report_your_answer_button">Свой ответ</string>
    <string name="admin_tools_report_your_answer_hint">Введите сообщение…</string>
    <string name="admin_tools_report_your_answer_title">Введите ответ на репорт</string>
    <string name="admin_tools_select_the_reason_for_the_punishment">Выберите причину наказания</string>
    <string name="admin_tools_show_all_patterns">Просмотр всех шаблонов</string>
    <string name="admin_tools_slap">Slap</string>
    <string name="admin_tools_statistic">Статистика</string>
    <string name="admin_tools_table_title_before_category">Все шаблоны ответов</string>
    <string name="admin_tools_table_title_with_category">%1$s: Все шаблоны</string>
    <string name="admin_tools_template_add_new_title_before_category">Добавление нового шаблона</string>
    <string name="admin_tools_template_add_new_title_with_category">%1$s: Добавление нового шаблона</string>
    <string name="admin_tools_template_editing_title_before_category">Редактирование шаблона</string>
    <string name="admin_tools_template_editing_title_with_category">%1$s: Редактирование шаблона</string>
    <string name="admin_tools_tracking_panel_table_title">%1$s: Выберите причину наказания</string>
    <string name="admin_tools_warn">Warn</string>
    <string name="admin_tools_your_report">Свой отчет</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">BLACK RUSSIA</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="banner_body_text_1_1">"Выполняйте задания, прокачивайте "</string>
    <string name="banner_body_text_1_2">"BLACK PASS "</string>
    <string name="banner_body_text_1_3">и получайте новые награды сезона</string>
    <string name="banner_body_text_2_1">"Купите "</string>
    <string name="banner_body_text_2_2">"BLACK PASS PREMIUM "</string>
    <string name="banner_body_text_2_3">"и получайте "</string>
    <string name="banner_body_text_2_4">"
в 2 раза "</string>
    <string name="banner_body_text_2_5">больше наград!</string>
    <string name="banner_body_text_2_ready_text">Купите BLACK PASS PREMIUM и получайте в 2 раза больше наград!</string>
    <string name="banner_body_text_3_1">"еще больше наград в "</string>
    <string name="banner_body_text_3_2">black pass premium deluxe</string>
    <string name="banner_button_show_prices">Получить</string>
    <string name="banner_new_season">НОВЫЙ СЕЗОН</string>
    <string name="banner_title_prize_1">"+10 открытых уровней
в BLACK PASS"</string>
    <string name="banner_title_prize_1_1">+10 открытых уровней</string>
    <string name="banner_title_prize_1_2">в BLACK PASS</string>
    <string name="banner_title_prize_1_3">"в "</string>
    <string name="banner_title_prize_1_4">BLACK PASS</string>
    <string name="banner_title_prize_1_html">"+10 открытых уровней
в &lt;font color=#E2310C>BLACK PASS&lt;/font>"</string>
    <string name="banner_title_prize_2">"VIP PLATINUM
НА 15 ДНЕЙ"</string>
    <string name="banner_title_prize_deluxe_market">911 Drakar</string>
    <string name="banner_title_prize_deluxe_market_banner">Porsche 911 Drakar</string>
    <string name="banner_title_prize_deluxe_site">911 Drakar</string>
    <string name="banner_title_prize_deluxe_site_banner">Porsche 911 Drakar</string>
    <string name="billing_error_sync">Ошибка синхронизации! Пожалуйста, перезайдите в текущий раздел.</string>
    <string name="black_pass_XP">XP</string>
    <string name="black_pass_action_level_up">повысить на %1$d уровень</string>
    <string name="black_pass_action_levels_up">повысить на %1$d уровней</string>
    <string name="black_pass_activate_text_body">приобрести данный премиум</string>
    <string name="black_pass_boost">BOOST</string>
    <string name="black_pass_boost_hint_text1">Успейте использовать</string>
    <string name="black_pass_boost_hint_text2">последний шанс и забрать награды.</string>
    <string name="black_pass_boost_hint_text3">Нажмите на</string>
    <string name="black_pass_boost_hint_text4">\"+\"</string>
    <string name="black_pass_boost_hint_text5">и выберите подходящее количество уровней для открытия.</string>
    <string name="black_pass_boost_hint_title">До завершения сезона осталось</string>
    <string name="black_pass_boost_hint_title_days">%1$d дней</string>
    <string name="black_pass_boost_max_level">MAX уровень</string>
    <string name="black_pass_boost_plus_level">+%1$d уровень</string>
    <string name="black_pass_boost_plus_levels">+%1$d уровней</string>
    <string name="black_pass_boost_price_item_description">Моментальное открытие уровней с наградами</string>
    <string name="black_pass_boost_text_button">прокачать</string>
    <string name="black_pass_last_chance">Последний шанс</string>
    <string name="black_pass_leader">"Лидер сезона "</string>
    <string name="black_pass_not_enough_money">Недостаточно средств</string>
    <string name="black_pass_premium_deluxe_include">Включает</string>
    <string name="black_pass_premium_deluxe_subtitle_1">"Все преимущества из "</string>
    <string name="black_pass_premium_deluxe_subtitle_html">Все преимущества из &lt;font color=#FFC700>&lt;b>BLACK PASS PREMIUM&lt;/b>&lt;/font></string>
    <string name="black_pass_premium_deluxe_title">BLACK PASS PREMIUM DELUXE</string>
    <string name="black_pass_premium_deluxe_unique_car">Уникальный транспорт</string>
    <string name="black_pass_premium_prize_2">Больше подарков и наград</string>
    <string name="black_pass_premium_prize_3">+ 200 пыли</string>
    <string name="black_pass_premium_subtitle_1">"Пакет "</string>
    <string name="black_pass_premium_subtitle_2">Premium</string>
    <string name="black_pass_premium_subtitle_html">Пакет &lt;font color=#FFC700>Premium&lt;/font></string>
    <string name="black_pass_premium_title">BLACK PASS PREMIUM</string>
    <string name="common_autologin">Автовход</string>
    <string name="common_cancel">Отмена</string>
    <string name="common_close">Закрыть</string>
    <string name="common_edittext_allowed_characters">"0123456789 .,!@#$€%^&amp;*()+=~?:;[]'-_/abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZабвгдеёжзийклмнопрстуфхцчшщъыьэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ\""</string>
    <string name="common_enter_by_fingerprint">Войти по отпечатку пальца</string>
    <string name="common_enter_password">Введите пароль</string>
    <string name="common_play">Играть</string>
    <string name="common_purchase">приобрести</string>
    <string name="common_recover_password">Восстановить пароль</string>
    <string name="common_return">Вернуться</string>
    <string name="common_select">Выбрать</string>
    <string name="donate_dialog_bc_hint">Введите кол-во BC</string>
    <string name="donate_dialog_bc_transformation">1 BC = 1.000 ₽</string>
    <string name="donate_dialog_input_you_get">Вы получите</string>
    <string name="donate_dialog_title">Покупка игровых рублей</string>
    <string name="taxi_increased_demand">Повышенный спрос</string>
    <string name="taxi_order_business">Бизнес</string>
    <string name="taxi_order_business_price">40 000 ₽</string>
    <string name="taxi_order_comfort">Комфорт</string>
    <string name="taxi_order_comfort_price">25 000 ₽</string>
    <string name="taxi_order_economy">Эконом</string>
    <string name="taxi_order_economy_price">10 000 ₽</string>
    <string name="taxi_order_g">g.TAXI</string>
    <string name="taxi_order_hint_comment">Ваш комментарий…</string>
    <string name="taxi_order_order_a_taxi">Заказать такси</string>
    <string name="taxi_order_s">BLACK.TAXI</string>
    <string name="taxi_order_title">Заказ службы такси</string>
    <string name="taxi_order_type_of_pay">Способ оплаты:</string>
    <string name="taxi_order_y">Я в такси</string>
    <string name="taxi_order_your_address">Адрес поездки:</string>
    <string name="taxi_the_fastest">Самый быстрый</string>
    <string name="taxi_your_address">Ваш адрес: %1$s</string>
</resources>