<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:layout_gravity="center" android:background="@drawable/img_table" android:layout_width="560.0dip" android:layout_height="320.0dip">
        <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="20.0dip">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <RelativeLayout android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="5.0dip">
                    <TextView android:textColor="@color/orange" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/taxi_order_title" android:layout_alignParentLeft="true" android:layout_centerInParent="true" android:fontFamily="@font/muller_bold" />
                    <androidx.appcompat.widget.AppCompatButton android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/br_taxi_order_close" android:background="@drawable/bg_rectangle_orange_hgr_cr20" android:layout_width="wrap_content" android:layout_height="30.0dip" android:text="@string/common_close" android:layout_alignParentRight="true" android:layout_centerInParent="true" android:textAllCaps="false" />
                </RelativeLayout>
                <View android:id="@id/view4" android:background="@drawable/bg_rectangle_gray30_white_hgr" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="20.0dip" />
                <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="20.0dip">
                    <ImageView android:id="@id/br_taxi_order_path" android:layout_width="30.0dip" android:layout_height="80.0dip" app:srcCompat="@drawable/img_taxi_path" />
                    <TextView android:textSize="10.0sp" android:textColor="@color/white" android:id="@id/br_taxi_order_start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="8.0dip" android:text="@string/taxi_your_address" android:layout_toRightOf="@id/br_taxi_order_path" android:fontFamily="@font/muller_bold" />
                    <TextView android:textSize="10.0sp" android:textColor="@color/white" android:id="@id/br_tasi_order_end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginBottom="8.0dip" android:text="@string/taxi_order_your_address" android:layout_toRightOf="@id/br_taxi_order_path" android:layout_alignBottom="@id/br_taxi_order_path" android:fontFamily="@font/montserrat_bold" />
                    <androidx.appcompat.widget.AppCompatButton android:textSize="10.0sp" android:textColor="@color/white" android:id="@id/br_taxi_order_end_butt" android:background="@drawable/bg_rectangle_orange_hgr_cr20" android:layout_width="80.0dip" android:layout_height="20.0dip" android:layout_marginLeft="10.0dip" android:text="@string/common_select" android:layout_toRightOf="@id/br_tasi_order_end" android:layout_alignBaseline="@id/br_tasi_order_end" android:layout_centerInParent="false" android:layout_centerHorizontal="false" android:textAllCaps="false" android:fontFamily="@font/muller_bold" />
                    <LinearLayout android:orientation="vertical" android:background="@drawable/bg_rectangle_black53_cr4" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="120.0dip" android:layout_height="80.0dip" android:layout_marginRight="30.0dip" android:layout_alignParentTop="false" android:layout_alignParentRight="true" android:layout_centerVertical="true">
                        <TextView android:textSize="12.0sp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/taxi_order_type_of_pay" />
                        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="5.0dip" android:layout_marginBottom="10.0dip">
                            <ImageView android:id="@id/br_taxi_order_money" android:layout_width="40.0dip" android:layout_height="20.0dip" android:layout_marginRight="10.0dip" android:layout_toLeftOf="@id/br_taxi_order_check" android:layout_centerHorizontal="false" android:layout_centerVertical="true" app:srcCompat="@drawable/img_money" />
                            <Switch android:id="@id/br_taxi_order_check" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:thumb="@drawable/ic_taxi_ellipse_s20" android:layout_centerInParent="true" android:track="@drawable/img_taxi_track_w40_h20" />
                            <ImageView android:id="@id/br_taxi_order_card" android:layout_width="40.0dip" android:layout_height="20.0dip" android:layout_marginLeft="10.0dip" android:layout_toRightOf="@id/br_taxi_order_check" android:layout_centerVertical="true" app:srcCompat="@drawable/img_card" />
                        </RelativeLayout>
                    </LinearLayout>
                </RelativeLayout>
                <View android:background="@drawable/bg_rectangle_gray30_white_hgr" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" />
                <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip">
                    <TextView android:textSize="10.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/br_taxi_text_gett" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/taxi_increased_demand" android:layout_below="@id/br_taxi_order_gett" android:layout_alignLeft="@id/br_taxi_order_gett" android:layout_alignRight="@id/br_taxi_order_gett" />
                    <TextView android:textSize="10.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/br_taxi_text_city" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/taxi_increased_demand" android:layout_below="@id/br_taxi_order_city" android:layout_alignLeft="@id/br_taxi_order_city" android:layout_alignRight="@id/br_taxi_order_city" />
                    <TextView android:textSize="10.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/br_taxi_text_yandex" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/taxi_the_fastest" android:layout_below="@id/br_taxi_order_yandex" android:layout_alignLeft="@id/br_taxi_order_yandex" android:layout_alignRight="@id/br_taxi_order_yandex" />
                    <FrameLayout android:id="@id/br_taxi_order_yandex" android:background="@drawable/ic_taxi_element_active" android:layout_width="130.0dip" android:layout_height="60.0dip" android:layout_marginRight="5.0dip" android:layout_toLeftOf="@id/br_taxi_order_city" android:layout_alignBottom="@id/br_taxi_order_city">
                        <TextView android:textColor="@color/white" android:layout_gravity="bottom|center|left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="35.0dip" android:layout_marginBottom="15.0dip" android:text="@string/taxi_order_y" android:fontFamily="@font/muller_bold" />
                    </FrameLayout>
                    <FrameLayout android:id="@id/br_taxi_order_city" android:background="@drawable/ic_taxi_element_inactive" android:layout_width="130.0dip" android:layout_height="60.0dip" android:layout_marginRight="5.0dip" android:layout_alignParentTop="true" android:layout_centerHorizontal="true">
                        <TextView android:textColor="@color/white" android:layout_gravity="bottom|center|left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginBottom="15.0dip" android:text="@string/taxi_order_s" android:fontFamily="@font/muller_bold" />
                    </FrameLayout>
                    <FrameLayout android:id="@id/br_taxi_order_gett" android:background="@drawable/bg_rectangle_black53_cr4" android:layout_width="120.0dip" android:layout_height="50.0dip" android:layout_marginTop="10.0dip" android:layout_toRightOf="@id/br_taxi_order_city">
                        <TextView android:textColor="@color/white" android:gravity="center" android:layout_gravity="bottom|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:text="@string/taxi_order_g" android:fontFamily="@font/muller_bold" />
                    </FrameLayout>
                    <View android:id="@id/br_taxi_order_view" android:background="@drawable/bg_rectangle_gray30_white_hgr" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="10.0dip" android:layout_below="@id/br_taxi_text_yandex" />
                    <LinearLayout android:orientation="vertical" android:id="@id/br_taxi_order_comfotable" android:background="@drawable/bg_rectangle_black53_cr4" android:layout_width="120.0dip" android:layout_height="60.0dip" android:layout_marginTop="10.0dip" android:weightSum="2.0" android:layout_below="@id/br_taxi_order_view" android:layout_alignLeft="@id/br_taxi_order_city">
                        <TextView android:textSize="10.0sp" android:textColor="#ff808080" android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/taxi_order_comfort" android:layout_weight="1.0" />
                        <TextView android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center|top" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/taxi_order_comfort_price" android:layout_weight="1.0" />
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:id="@id/br_taxi_order_business" android:background="@drawable/bg_rectangle_black53_cr4" android:layout_width="120.0dip" android:layout_height="60.0dip" android:layout_marginTop="10.0dip" android:weightSum="2.0" android:layout_below="@id/br_taxi_order_view" android:layout_alignLeft="@id/br_taxi_order_gett">
                        <TextView android:textSize="10.0sp" android:textColor="#ff808080" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/taxi_order_business" android:layout_weight="1.0" />
                        <TextView android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center|top" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/taxi_order_business_price" android:layout_weight="1.0" />
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:id="@id/br_taxi_order_econom" android:background="@drawable/bg_rectangle_black50_cr5_t1_orange" android:layout_width="120.0dip" android:layout_height="60.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="15.0dip" android:weightSum="2.0" android:layout_below="@id/br_taxi_order_view" android:layout_alignLeft="@id/br_taxi_order_yandex">
                        <TextView android:textSize="10.0sp" android:textColor="#ff808080" android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/taxi_order_economy" android:layout_weight="1.0" />
                        <TextView android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center|top" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/taxi_order_economy_price" android:layout_weight="1.0" />
                    </LinearLayout>
                </RelativeLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="20.0dip" android:weightSum="1.0">
                    <EditText android:textSize="10.0sp" android:textColor="@color/white" android:textColorHint="#88888888" android:id="@id/br_taxi_order_comm" android:background="@drawable/bg_rectangle_black73_47_cr10" android:paddingLeft="10.0dip" android:layout_width="0.0px" android:layout_height="30.0dip" android:layout_marginRight="10.0dip" android:hint="@string/taxi_order_hint_comment" android:ems="10" android:layout_weight="0.7" android:inputType="textPersonName" android:fontFamily="@font/muller_bold" />
                    <androidx.appcompat.widget.AppCompatButton android:textColor="@color/white" android:id="@id/br_taxi_order_send" android:background="@drawable/bg_rectangle_orange_hgr_cr20" android:layout_width="0.0dip" android:layout_height="30.0dip" android:text="@string/taxi_order_order_a_taxi" android:layout_weight="0.3" android:textAllCaps="false" android:fontFamily="@font/muller_bold" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</FrameLayout>
