<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingTop="25.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="30.0dip" android:paddingEnd="25.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:id="@id/back_but" android:layout_width="wrap_content" android:layout_height="30.0dip" android:layout_marginBottom="40.0dip">
        <TextView android:textSize="12.0sp" android:textColor="#ff848ba2" android:gravity="center_vertical" android:layout_gravity="top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/common_return" android:drawablePadding="2.0dip" android:fontFamily="@font/montserrat_regular" android:layout_marginStart="2.0dip" app:drawableStartCompat="@drawable/ic_back_2_s10" />
    </LinearLayout>
    <com.blackhub.bronline.game.common.CustomEditTextWithBackPressEvent android:textSize="11.0sp" android:textColor="#ffffffff" android:textColorHint="#ff8a92aa" android:gravity="start|center" android:id="@id/password_enter" android:background="@drawable/bg_rectangle_gray_cr4_2" android:paddingLeft="14.0dip" android:paddingRight="14.0dip" android:visibility="visible" android:longClickable="true" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:hint="@string/common_enter_password" android:ems="10" android:singleLine="true" android:maxLength="16" android:digits="@string/common_edittext_allowed_characters" android:inputType="textPassword" android:imeOptions="actionSend|flagNoExtractUi|flagNoFullscreen" android:fontFamily="@font/montserrat_regular" />
    <LinearLayout android:id="@id/fingerprint_but" android:background="@drawable/bg_rectangle_white_cr4" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginLeft="5.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="5.0dip">
        <ImageView android:layout_gravity="center_vertical" android:background="@drawable/img_black_finger" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginStart="5.0dip" />
        <TextView android:textSize="11.0sp" android:textColor="#ff000000" android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/common_enter_by_fingerprint" android:fontFamily="@font/montserrat_bold" />
    </LinearLayout>
    <TextView android:textSize="10.0sp" android:textColor="#ff848ba2" android:gravity="center" android:id="@id/password_text" android:layout_width="fill_parent" android:layout_height="25.0dip" android:layout_marginTop="5.0dip" android:text="@string/common_recover_password" android:fontFamily="@font/montserrat_regular" />
    <FrameLayout android:layout_gravity="bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
        <LinearLayout android:orientation="horizontal" android:id="@id/auto_text" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginStart="5.0dip">
            <TextView android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/common_autologin" android:layout_weight="1.0" android:fontFamily="@font/montserrat_regular" />
            <ImageView android:id="@id/auto_img" android:layout_width="17.0dip" android:layout_height="20.0dip" android:layout_weight="1.0" android:layout_marginStart="5.0dip" app:srcCompat="@drawable/ic_info_1" />
        </LinearLayout>
        <com.google.android.material.switchmaterial.SwitchMaterial android:layout_gravity="end" android:id="@id/auto_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:thumb="@drawable/bg_oval_gray_s20" android:track="@drawable/bg_switch_back_track_w40_h20" android:layout_marginEnd="5.0dip" />
    </FrameLayout>
    <androidx.appcompat.widget.AppCompatButton android:textColor="#ffffffff" android:id="@id/play_but" android:background="@drawable/bg_button_red_cr5_t1_white" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginLeft="5.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="5.0dip" android:text="@string/common_play" android:alpha="0.5" android:fontFamily="@font/montserrat_bold" />
</LinearLayout>
