<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/dw_root" android:background="@drawable/bg_rectangle_dark_gray_cr12" android:paddingBottom="@dimen/_10sdp" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/_11ssp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/dw_caption" android:background="@drawable/square_red_header" android:paddingTop="@dimen/_5sdp" android:paddingBottom="@dimen/_5sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/donate_dialog_title" android:singleLine="true" android:textAllCaps="true" android:fontFamily="@font/montserrat_bold" />
    <EditText android:textSize="@dimen/_11ssp" android:textColor="#ffffffff" android:textColorHint="#ff8f8f8f" android:gravity="center" android:id="@id/input" android:background="@drawable/bg_rectangle_gray_cr13" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_12sdp" android:hint="@string/donate_dialog_bc_hint" android:maxLength="8" android:digits="\ 0123456789" android:inputType="numberDecimal" android:layout_marginStart="@dimen/_24sdp" android:layout_marginEnd="@dimen/_24sdp" />
    <LinearLayout android:orientation="vertical" android:id="@id/subedit" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/_10sdp">
        <TextView android:textSize="@dimen/_10ssp" android:textColor="#ffffffff" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/_4sdp" android:text="@string/donate_dialog_bc_transformation" android:fontFamily="@font/muller_regular" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/_10ssp" android:textColor="#ffffffff" android:id="@id/info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/donate_dialog_input_you_get" android:fontFamily="@font/muller_regular" />
            <TextView android:textSize="@dimen/_10ssp" android:textColor="#ffffffff" android:id="@id/value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="@font/muller_bold" android:layout_marginStart="5.0dip" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="@dimen/_28sdp" android:layout_marginTop="16.0dip" android:layout_marginStart="60.0dip" android:layout_marginEnd="60.0dip">
        <androidx.appcompat.widget.AppCompatButton android:textSize="@dimen/_11ssp" android:textColor="#ffffffff" android:id="@id/dw_button_ok" android:background="@drawable/bg_button_red_cr5_t1_white" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="fill_parent" android:minWidth="@dimen/_80sdp" android:text="@string/common_purchase" android:layout_weight="1.0" android:textAllCaps="true" android:fontFamily="@font/muller_bold" android:paddingStart="@dimen/_7sdp" android:paddingEnd="@dimen/_7sdp" />
        <androidx.appcompat.widget.AppCompatButton android:textSize="@dimen/_11ssp" android:textColor="#ffffffff" android:id="@id/dw_button_cancel" android:background="@drawable/bg_button_blue_cr5_t1_white" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="fill_parent" android:minWidth="@dimen/_80sdp" android:text="@string/common_cancel" android:layout_weight="1.0" android:textAllCaps="true" android:fontFamily="@font/muller_bold" android:paddingStart="@dimen/_7sdp" android:paddingEnd="@dimen/_7sdp" android:layout_marginStart="16.0dip" />
    </LinearLayout>
</LinearLayout>
